# pypi-sample-package

./: .gitignore  README.md  pyproject.toml
src/example_package_creig_with_an_e.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
